--- a/Lab6-06-Exercise03.ipynb
+++ b/Lab6-06-Exercise03.ipynb
@@ -93,7 +93,8 @@
     "การต่อสายอักขระ (+=) จะสร้าง ออบเจ็กต์ใหม่ และเก็บไว้ในตัวแปรเดิม (s1 ในกรณีนี้) โดยค่าเก่าจะถูกปล่อยให้ Garbage Collector จัดการ\n",
     "Hash Code:\n",
     "\n",
-    "ค่า Hash Code \n",
+    "ค่า Hash Code :\n",
+    "\n",
     "ของออบเจ็กต์สายอักขระจะเปลี่ยนเมื่อสร้างออบเจ็กต์ใหม่\n",
     "s1 มีค่า Hash Code ใหม่หลังการต่อสาย เพราะเป็นออบเจ็กต์ใหม่\n",
     "s2 ยังคงไม่เปลี่ยนแปลง เพราะไม่ได้รับผลกระทบจากการดำเนินการ\n",
